// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading component: Should render with message 1`] = `
<Styled(Container)
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Styled(Spinner)
    color="rgb(249, 149, 0)"
  />
  <Styled(Text)
    style={
      Object {
        "color": "#575757",
      }
    }
  >
    Test message
  </Styled(Text)>
</Styled(Container)>
`;

exports[`Loading component: Should render without message 1`] = `
<Styled(Container)
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Styled(Spinner)
    color="rgb(249, 149, 0)"
  />
</Styled(Container)>
`;
